fix: our story container align when its mobile

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -406,6 +406,7 @@ body {
   }
   .our-story-container {
     flex-direction: column;
+    align-items: center;
 
     .divider-our {
       width: 100%;
